--- a/css/style.css
+++ b/css/style.css
@@ -13,63 +13,28 @@ body {
     font-family: "roboto", arial;
     font-size: 14pt;
     background-color: #9d9d9d;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-/*Typographie*/
-.petit{font-size: 0.75rem;}
-.normal{font-size: 1rem;}
-.gros{font-size: 1.5rem;}
-.tresGros{font-size: 2rem;}
-.large{font-size: 2.5rem;}
-.tresLarge{font-size: 5rem;}
-
-/*Theme : Terrosos -Verdes claros*/
-.color1{
-    color: #7E8A68;
+.row{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
-.color2{
-    color: #95A47B;
+.col{
+    box-sizing: border-box;
+    padding: 0;
 }
 
-.color3{
-    color: #A1B185;
+.cell{
+    border: 1px solid #333333;
 }
 
-.color4{
-    color: #BDD09C;
-}
-
-.color5{
-    color: #DBF0B4;
-}
-
-.backColor1{
-    background-color: #7E8A68;
-}
-
-.backColor2{
-    background-color: #95A47B;
-}
-
-.backColor3{
-    background-color: #A1B185;
-}
-
-.backColor4{
-    background-color: #BDD09C;
-}
-
-.backColor5{
-    background-color: #DBF0B4;
-}
-
-nav {
-    align-self: flex-start;
-}
 
 #container {
-    width: 1500px;
+    width: 100%;
     min-height: 790px;
     margin-right: auto;
     margin-left: auto;
@@ -80,9 +45,24 @@ nav {
     align-items: center;
 }
 
+nav {
+    width: 100%;
+    align-self: flex-start;
+}
+
+nav ul {
+    background-color: rosybrown;
+}
+
 nav li {
-    display: inline;
+    display: inline-block;
     padding: 0.5rem;
+    background-color: rosybrown;
+}
+
+nav li a {
+    color: black;
+    text-decoration: none;
 }
 
 form {
@@ -108,35 +88,176 @@ label {
     font-size: 1.25rem;
     padding-bottom: 0.5rem;
 }
+
 /*------------------------------------------------
 --                  RESPONSIVE                  --
 --------------------------------------------------*/
 
 @media all and (min-width: 1535px) {
     body {
-        width: 1580px;
+        width: 1500px;
     }
 }
 
-@media all and (min-width: 1200px) {
-    /*header, footer {*/
-    /*padding-right: 36px;*/
-    /*padding-left: 36px;*/
-    /*}*/
+@media only screen and (min-width: 801px) {
+    .dsk-0 {
+        display: none;
+    }
+
+    .dsk-1 {
+        width: 8.33%;
+    }
+
+    .dsk-2 {
+        width: 16.66%;
+    }
+
+    .dsk-3 {
+        width: 24.99%;
+    }
+
+    .dsk-4 {
+        width: 33.33%;
+    }
+
+    .dsk-5 {
+        width: 41.66%;
+    }
+
+    .dsk-6 {
+        width: 49.99%;
+    }
+
+    .dsk-7 {
+        width: 58.33%;
+    }
+
+    .dsk-8 {
+        width: 66.66%;
+    }
+
+    .dsk-9 {
+        width: 74.99%;
+    }
+
+    .dsk-10 {
+        width: 83.33%;
+    }
+
+    .dsk-11 {
+        width: 91.66%;
+    }
+
+    .dsk-12 {
+        width: 100%;
+    }
 }
 
-@media all and (min-width: 992px) {
-    /*header, .tt-bsh-container, footer {*/
-    /*padding-right: 26px;*/
-    /*padding-left: 26px;*/
-    /*}*/
+@media only screen and (min-width: 481px) and (max-width: 800px) {
+    .tab-0 {
+        display: none;
+    }
+
+    .tab-1 {
+        width: 8.33%;
+    }
+
+    .tab-2 {
+        width: 16.66%;
+    }
+
+    .tab-3 {
+        width: 24.99%;
+    }
+
+    .tab-4 {
+        width: 33.33%;
+    }
+
+    .tab-5 {
+        width: 41.66%;
+    }
+
+    .tab-6 {
+        width: 49.99%;
+    }
+
+    .tab-7 {
+        width: 58.33%;
+    }
+
+    .tab-8 {
+        width: 66.66%;
+    }
+
+    .tab-9 {
+        width: 74.99%;
+    }
+
+    .tab-10 {
+        width: 83.33%;
+    }
+
+    .tab-11 {
+        width: 91.66%;
+    }
+
+    .tab-12 {
+        width: 100%;
+    }
 }
 
-@media all and (min-width: 768px) {
-    /*header, main, footer {*/
-    /*padding-right: 24px;*/
-    /*padding-left: 24px;*/
-    /*}*/
-    /*#mnuDesktop {*/
-    /*}*/
+@media only screen and (max-width: 480px) {
+
+    .mob-0 {
+        display: none;
+    }
+
+    .mob-1 {
+        width: 8.33%;
+    }
+
+    .mob-2 {
+        width: 16.66%;
+    }
+
+    .mob-3 {
+        width: 24.99%;
+    }
+
+    .mob-4 {
+        width: 33.33%;
+    }
+
+    .mob-5 {
+        width: 41.66%;
+    }
+
+    .mob-6 {
+        width: 49.99%;
+    }
+
+    .mob-7 {
+        width: 58.33%;
+    }
+
+    .mob-8 {
+        width: 66.66%;
+    }
+
+    .mob-9 {
+        width: 74.99%;
+    }
+
+    .mob-10 {
+        width: 83.33%;
+    }
+
+    .mob-11 {
+        width: 91.66%;
+    }
+
+    .mob-12 {
+        width: 100%;
+    }
 }
